[package]
name = "gtk_list_box_test"
version = "0.1.0"
authors = ["Nico Just <mail@njust.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.10.2"
gtk = {version = "0.9.2", features = ["v3_16"]}
gio = {version = "0.9.1", features = ["v2_44"]}
glib_data_model_helper = {git = "https://github.com/njust/glib_data_model_helper.git"}
